# opennurbs-write-bug

./: .gitignore  CMakeLists.txt
cmake/: opennurbs.cmake
src/: main.cpp
